--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -47,7 +47,7 @@
           <div class="brand">
           <%= link_to "Vinayak", root_path  %></div>
            <div class="container nav-collapse">
-            <ul class="nav">
+            <ul class="nav pull-right">
 	       <li><%= render 'devise/menu/registration_items' %></li>
 	       <li><%= render 'devise/menu/login_items' %></li>
             </ul>
@@ -62,18 +62,7 @@
            <div class="span9">
               <%= yield %>
             </div>
-            <div class="span3">
-              <div class="well sidebar-nav">
-                <h3>Sidebar</h3>
-                <ul class="nav nav-list">
-                  <li class="nav-header">Sidebar</li>
-                  <li><%= link_to "Link1", "/path1"  %></li>
-                  <li><%= link_to "Link2", "/path2"  %></li>
-                  <li><%= link_to "Link3", "/path3"  %></li>
-                </ul>
-              </div><!--/.well -->
-            </div><!--/span-->
-        </div><!--/row-->
+         </div><!--/row-->
       </div><!--/content-->
 
       <footer>
