--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,7 +5,6 @@
 /* Your stylesheets goes here... */
 
 
-
 ul.hmenu {
     list-style: none;
     margin: 0 0 2em;
@@ -15,3 +14,29 @@ ul.hmenu {
 ul.hmenu li {
     display: inline;
 }
+
+/* footer */
+footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #999;
+}
+footer a {
+    color: #555;
+}
+footer a:hover {
+    color: #222;
+}
+footer small {
+    float: left;
+}
+footer ul {
+    float: right;
+    list-style: none;
+}
+footer ul li {
+    float: left;
+    margin-left: 10px;
+}
+
