--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,44 +43,37 @@
       <div class="slides_container">
         <div class="slide">
          <img src="assets/slide-1.jpg" width="570" height="270" alt="Slide 1">
-          <div class="caption" style="bottom:0">
-            <p>Happy Bokeh Thursday!</p>
+          <div class="caption" style="bottom:0"> <p>Happy Bokeh Thursday!</p>
           </div>
         </div>
         <div class="slide">
         <img src="assets/slide-2.jpg" width="570" height="270" alt="Slide 2">
-          <div class="caption">
-            <p>Taxi</p>
+          <div class="caption"> <p>Taxi</p>
           </div>
         </div>
         <div class="slide">
          <img src="assets/slide-3.jpg" width="570" height="270" alt="Slide 3">
-          <div class="caption">
-            <p>Happy Bokeh raining Day</p>
+          <div class="caption"> <p>Happy Bokeh raining Day</p>
           </div>
         </div>
         <div class="slide">
          <img src="assets/slide-4.jpg" width="570" height="270" alt="Slide 4">
-          <div class="caption">
-            <p>We Eat Light</p>
+          <div class="caption"> <p>We Eat Light</p>
           </div>
         </div>
         <div class="slide">
           <img src="assets/slide-5.jpg" width="570" height="270" alt="Slide 5">
-          <div class="caption">
-            <p>&ldquo;I must go down to the sea again, to the lonely sea and the sky...&rdquo;</p>
+          <div class="caption"> <p>&ldquo;I must go down to the sea again, to the lonely sea and the sky...&rdquo;</p>
           </div>
         </div>
         <div class="slide">
           <img src="assets/slide-6.jpg" width="570" height="270" alt="Slide 6">
-          <div class="caption">
-            <p>twelve.inch</p>
+          <div class="caption"> <p>twelve.inch</p>
           </div>
         </div>
         <div class="slide">
           <img src="assets/slide-7.jpg" width="570" height="270" alt="Slide 7">
-          <div class="caption">
-            <p>Save my love for loneliness</p>
+          <div class="caption"> <p>Save my love for loneliness</p>
           </div>
         </div>
       </div>
