--- a/app/views/_footer.html.erb
+++ b/app/views/_footer.html.erb
@@ -3,7 +3,7 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "About us", about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
