--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,4 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
+
+
+
 body { 
 	padding-top: 60px;
 }
@@ -29,4 +32,4 @@ body {
 // See http://twitter.github.com/bootstrap/less.html for their names and documentation
 //
 // Example:
-// @linkColor: #ff0000;
+//@linkColor: #08c;
