--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -5,17 +5,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <div class="brand">
-          <%= link_to "Vinayak", root_path  %></div>
+          <div class="brand"> <%= link_to "Vinayak", root_path  %></div>
            <div class="container nav-collapse">
             <ul class="nav pull-right">
-              <ul class="nav nav-tabs">
+
 
                <li class="active" ><%= link_to "Home", root_path %></li>
                <li><%= render 'devise/menu/registration_items' %></li>
 	           <li><%= render 'devise/menu/login_items' %></li>
               </ul>
-            </ul>
+
           </div><!--/.nav-collapse -->
         </div>
       </div>
